// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-gFeNAA fnPTuj"
>
  <input
    checked={true}
    className="sc-kxCoLp hxbKpC"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-ciicml bpqhVu"
  >
    <span
      className="sc-eZgkGA kLWXuq"
    >
      <div
        checked={true}
        className="sc-iDRUQT ikvNIX"
      />
    </span>
    <p
      className="sc-cQIpJi llFRTU"
      size={14}
    >
      Checkbox with checked state by default
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-gFeNAA fnPTuj"
>
  <input
    className="sc-kxCoLp hxbKpC"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-ciicml bpqhVu"
  >
    <span
      className="sc-eZgkGA kLWXuq"
    >
      <div
        checked={false}
        className="sc-iDRUQT iHmewq"
      />
    </span>
    <p
      className="sc-cQIpJi llFRTU"
      size={14}
    >
      Disabled Checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-gFeNAA fnPTuj"
>
  <input
    className="sc-kxCoLp hxbKpC"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-ciicml bpqhVu"
  >
    <span
      className="sc-eZgkGA kLWXuq"
    >
      <div
        checked={false}
        className="sc-iDRUQT iHmewq"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Read only 1`] = `
<label
  className="sc-gFeNAA fnPTuj"
>
  <input
    className="sc-kxCoLp hxbKpC"
    onClick={[Function]}
    readOnly={true}
    type="checkbox"
  />
  <div
    className="sc-ciicml bpqhVu"
  >
    <span
      className="sc-eZgkGA kLWXuq"
    >
      <div
        checked={false}
        className="sc-iDRUQT iHmewq"
      />
    </span>
    <p
      className="sc-cQIpJi llFRTU"
      size={14}
    >
      Readonly checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders default 1`] = `
<label
  className="sc-gFeNAA fnPTuj"
>
  <input
    className="sc-kxCoLp hxbKpC"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-ciicml bpqhVu"
  >
    <span
      className="sc-eZgkGA kLWXuq"
    >
      <div
        checked={false}
        className="sc-iDRUQT iHmewq"
      />
    </span>
    <p
      className="sc-cQIpJi llFRTU"
      size={14}
    >
      Default Checkbox
    </p>
  </div>
</label>
`;
